# tgisper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ghcr-publish.yml  release.yml
tgisper/: metrics.py  tgisperbot.py
